apps/octoprint/endpoints.yaml
kind: Endpoints
apiVersion: v1
metadata:
  name: octoprint
  labels:
    app: octoprint
subsets:
  - addresses:
      - ip: 10.4.255.155
    ports:
      - name: web
        port: 80
        protocol: TCP
