apps/octoprint/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: octoprint
  labels:
    app: octoprint
spec:
  ports:
    - name: web
      port: 80
      protocol: TCP
      targetPort: 80
