apps/octoprint/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: octoprint
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: octoprint.chaosdorf.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: octoprint
                port:
                  number: 80
  tls:
    - hosts:
        - octoprint.chaosdorf.space
      secretName: ingress-tls
